Modified CMake build for Windows and PxPreprocessor compile error.

--- a/physx/source/compiler/cmake/windows/CMakeLists.txt
+++ b/physx/source/compiler/cmake/windows/CMakeLists.txt
@@ -58,9 +58,9 @@ ENDIF()
 
 # C Flags
 IF(CMAKE_CL_64)
-    SET(PHYSX_C_FLAGS "${PHYSX_COMMON_FLAGS}" CACHE INTERNAL "PhysX C")
+	SET(PHYSX_C_FLAGS "${PHYSX_COMMON_FLAGS}" CACHE INTERNAL "PhysX C")
 ELSE()
-    SET(PHYSX_C_FLAGS "/arch:SSE2 ${PHYSX_COMMON_FLAGS}" CACHE INTERNAL "PhysX C")
+	SET(PHYSX_C_FLAGS "/arch:SSE2 ${PHYSX_COMMON_FLAGS}" CACHE INTERNAL "PhysX C")
 ENDIF()
 
 SET(PHYSX_CXX_FLAGS_DEBUG "${PHYSX_COMMON_FLAGS_DEBUG}" CACHE INTERNAL "PhysX Debug CXX Flags")
@@ -137,20 +137,20 @@ IF(PX_COPY_EXTERNAL_DLL OR PUBLIC_RELEASE)
 	ENDIF()
 
 	IF(CMAKE_CL_64)
-		FILE(COPY ${PHYSX_SLN_PHYSXDEVICE_PATH}/PhysXDevice64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_DEBUG})
-		FILE(COPY ${PHYSX_SLN_PHYSXDEVICE_PATH}/PhysXDevice64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_PROFILE})
-		FILE(COPY ${PHYSX_SLN_PHYSXDEVICE_PATH}/PhysXDevice64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_RELEASE})
-		FILE(COPY ${PHYSX_SLN_PHYSXDEVICE_PATH}/PhysXDevice64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_CHECKED})
+		FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/debug/PhysXDevice64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_DEBUG})
+		FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/profile/PhysXDevice64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_PROFILE})
+		FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/release/PhysXDevice64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_RELEASE})
+		FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/checked/PhysXDevice64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_CHECKED})
 
-		FILE(COPY ${PHYSX_SLN_FREEGLUT_PATH}/win64/freeglutd.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_DEBUG})
-		FILE(COPY ${PHYSX_SLN_FREEGLUT_PATH}/win64/freeglut.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_PROFILE})
-		FILE(COPY ${PHYSX_SLN_FREEGLUT_PATH}/win64/freeglut.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_RELEASE})
-		FILE(COPY ${PHYSX_SLN_FREEGLUT_PATH}/win64/freeglut.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_CHECKED})
+		FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/debug/freeglutd.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_DEBUG})
+		FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/profile/freeglut.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_PROFILE})
+		FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/release/freeglut.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_RELEASE})
+		FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/checked/freeglut.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_CHECKED})
 	ELSE()
-		FILE(COPY ${PHYSX_SLN_PHYSXDEVICE_PATH}/PhysXDevice.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_DEBUG})
-		FILE(COPY ${PHYSX_SLN_PHYSXDEVICE_PATH}/PhysXDevice.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_PROFILE})
-		FILE(COPY ${PHYSX_SLN_PHYSXDEVICE_PATH}/PhysXDevice.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_RELEASE})
-		FILE(COPY ${PHYSX_SLN_PHYSXDEVICE_PATH}/PhysXDevice.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_CHECKED})
+		FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/debug/PhysXDevice.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_DEBUG})
+		FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/profile/PhysXDevice.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_PROFILE})
+		FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/release/PhysXDevice.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_RELEASE})
+		FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/checked/PhysXDevice.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_CHECKED})
 	ENDIF()
 ENDIF()
 # for public release we copy the dlls for GPU other platforms so we dont keep duplicates around the repository
@@ -161,10 +161,10 @@ IF(PUBLIC_RELEASE)
 	IF(NOT GPU_DLL_COPIED)
 		SET(GPU_DLL_COPIED 1 CACHE INTERNAL "PhysX GPU dlls copied")
 		IF(CMAKE_CL_64)
-			FILE(COPY ${PHYSX_SLN_PHYSXGPU_PATH}/win.x86_64.vc141.mt/checked/PhysXGpu_64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_CHECKED})
-			FILE(COPY ${PHYSX_SLN_PHYSXGPU_PATH}/win.x86_64.vc141.mt/profile/PhysXGpu_64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_PROFILE})
-			FILE(COPY ${PHYSX_SLN_PHYSXGPU_PATH}/win.x86_64.vc141.mt/release/PhysXGpu_64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_RELEASE})
-			FILE(COPY ${PHYSX_SLN_PHYSXGPU_PATH}/win.x86_64.vc141.mt/checked/PhysXGpu_64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_DEBUG})
+			FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/checked/PhysXGpu_64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_CHECKED})
+			FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/profile/PhysXGpu_64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_PROFILE})
+			FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/release/PhysXGpu_64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_RELEASE})
+			FILE(COPY ${PHYSX_ROOT_DIR}/bin/${PLATFORM_BIN_NAME}/debug/PhysXGpu_64.dll DESTINATION ${PX_EXE_OUTPUT_DIRECTORY_DEBUG})
 		ENDIF()
 	ENDIF()
 ENDIF()
@@ -221,10 +221,10 @@ ELSE()
 	ENDIF()
 
 	INSTALL(
-		TARGETS ${PHYSXDISTRO_LIBS}
-		EXPORT PhysXSDK
-		DESTINATION $<$<CONFIG:debug>:${PX_ROOT_LIB_DIR}/debug>$<$<CONFIG:release>:${PX_ROOT_LIB_DIR}/release>$<$<CONFIG:checked>:${PX_ROOT_LIB_DIR}/checked>$<$<CONFIG:profile>:${PX_ROOT_LIB_DIR}/profile>
-		)
+			TARGETS ${PHYSXDISTRO_LIBS}
+			EXPORT PhysXSDK
+			DESTINATION $<$<CONFIG:debug>:${PX_ROOT_LIB_DIR}/debug>$<$<CONFIG:release>:${PX_ROOT_LIB_DIR}/release>$<$<CONFIG:checked>:${PX_ROOT_LIB_DIR}/checked>$<$<CONFIG:profile>:${PX_ROOT_LIB_DIR}/profile>
+	)
 
 ENDIF()
 
